<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permission from you. Otherwise we will not to able to provide our service</string>
    <string name="permission_request">Permission Required</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="_3">3</string>
    <string name="tap_on_my_location_button">Tap on my Location Button.</string>
    <string name="go">GO</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
</resources>