<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PermissionFragment">


        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="26sp"
            android:text="@string/permission_request"
            app:layout_constraintBottom_toTopOf="@+id/permission_description_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/permission_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32sp"
            android:layout_marginBottom="48dp"
            android:text="@string/permission_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32sp"
            android:layout_marginBottom="32dp"
            android:text="@string/continue_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="16dp"
            android:src="@drawable/map_image"
            app:layout_constraintBottom_toTopOf="@+id/welcome_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>